# mystl

./: .gitignore  CMakeLists.txt  README.md
src/mystl/: quat.hpp  vec3.hpp  vector.hpp
tests/: test_catch.cpp  test_quat.cpp  test_vec3.cpp  test_vector.cpp
